# multi-agent-grading-system

./: AGENT_ARCHITECTURE.md  FRONTEND_API_GUIDE.md  PRESENTATION_AI_APPROACH.md  PRODUCTION_ROADMAP.md  README.md  agent_architecutre_fix.md  api.md  schema_dump.txt
agent/: .gitignore  main.py  pyproject.toml  seed_data.sql
agent/api/service/: Textract_service.py
agent/config/: db.py
agent/utils/: document_content.py
agent/utils/question_agent/: graph.py  node.py  prompts.py  state.py  tools.py
agent/utils/rubrics_agent/: graph.py  node.py  prompt.py  tools.py
agent/utils/solutions_agent/: graph.py  node.py  prompt.py  state.py  tools.py
agent/utils/student_answer_agent/: graph.py  node.py  prompt.py  state.py  tools.py
backend/src/: server.ts
backend/src/common/: HttpError.ts
backend/src/config/: env.ts  openapi.ts
backend/src/controllers/: assignmentController.ts  auth.controller.ts  studentController.ts  taChatController.ts  taContextController.ts  user.controller.ts
backend/src/docs/: assignment.openapi.ts  student.openapi.ts  taChat.openapi.ts  taContext.openapi.ts
backend/src/lib/: database.ts  jwt.ts
backend/src/routes/: Assignment.ts  authRoute.ts  student.ts  taChat.ts  taContext.ts  userRoute.ts
backend/src/schemas/: auth.schemas.ts  user.schemas.ts
backend/src/services/: auth.service.ts  user.service.ts
backend/src/types/: auth.ts  express.d.ts  roles.ts
