[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "boto3>=1.43.6",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fitz>=0.0.1.dev2",
    "httpx>=0.27.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=0.2.34",
    "openai>=1.40.0",
    "pdf2image>=1.17.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.28",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
]
